Media queries for mobile view

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         class="perfume__image"
       />
       <div class="container">
-        <h2 class="container__heading-small">Perfume</h2>
+        <h2 class="container__heading-small">PERFUME</h2>
         <h1 class="container__heading-primary">
           Gabrielle Essence Eau De Parfum
         </h1>
